# tcs-poc

./: .gitignore  PROJECT_STATUS.md  README.md
tcs/tcs-poc/tcs-api/: Dockerfile  README.md  docker-compose.yml  full_response.json  nginx.conf  pyproject.toml  run-api.sh  test_api_endpoint.sh  test_new_endpoint.py
tcs/tcs-poc/tcs-api/.claude/: settings.local.json
tcs/tcs-poc/tcs-api/.hypothesis/constants/: 03d60889eb22803a  08bf6524cfd2e458  11187499bd9b20c3  142cd4216a454abf  18da363eab572a92  1bf2e84de0a30d2d  1c6bc5ac6b32827c  2aca350b8cae1ffd  2b1c35263f1410fa  2e17c380681143f9  32d36db445f1b8bb  3c29899c9d3acd25  3c8480616796b807  49be4fe7811d688f  5294c2dcc5b3bd1c  55b661584d9c29c5  62df012152a330d7  642a8eed595bc8e9  67926d15398457e1  6e77ec877079b9e2  6f0d509eba0af304  7354b50d00065144  77fc243ef00a151b  7821479539445168  7f73b2a3fd720cba  867d41d69bafc3bb  9101e81016ab853e  98f696a2c5705f85  99142d79cb9164d2  99896193d0849da0  9adfff7521845320  9f030ee5da5417e2  a49fa161f2320e5c  a83125c42635de98  ac08c8798276ebe8  b17cfeb62706fdb6  b2f5a2bf31f86d78  bb1abff3dc732e16  c213e66e42f4f4ac  c260b235d1227c04  (+14 more)
tcs/tcs-poc/tcs-api/examples/: save_request_example.json
tcs/tcs-poc/tcs-api/src/trade_api/: main.py
tcs/tcs-poc/tcs-api/tests/: INTEGRATION_TESTS.md  __init__.py  conftest.py  health_performance_test.py  performance_test.py  test_endpoints_integration.py  test_full_integration.py  test_health.py  test_property_based.py  test_schedule_validation.py  test_trade.py  test_trade_service.py  test_validation_business_rules.py  test_validation_examples.py  test_validators_unit.py
tcs/tcs-poc/tcs-api/tests/helpers/: __init__.py  (+1 more)
tcs/tcs-poc/tcs-store/: .coverage  README.md  pyproject.toml  run-store.sh
tcs/tcs-poc/tcs-store/examples/: README.md  example_client.py  example_contexts.json  example_trades.json
tcs/tcs-poc/tcs-store/tests/: __init__.py  conftest.py
(+599 files in other folders)
