[tool.poetry]
name = "trade-api"
version = "0.1.0"
description = "FastAPI-based Trade API system for processing financial swap deals"
authors = ["Trade API Team"]
readme = "README.md"
packages = [{include = "trade_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.5.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
gunicorn = "^21.2.0"
pydantic-settings = "^2.12.0"
orjson = "^3.11.5"
jmespath = "^1.0.1"
glom = "^25.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
hypothesis = "^6.92.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.poetry.scripts]
trade-api = "trade_api.main:app"